--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,15 @@
-cmake_minimum_required(VERSION 3.7)
+cmake_minimum_required(VERSION 3.0)
 project(spaceraft)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
-set(CMAKE_PREFIX_PATH /Users/rwblickhan/Developer/Qt5.9/5.9.1/clang_64)
+# nasty hack to get this working with travis, should fix later
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "AppleClang")
+    set(CMAKE_PREFIX_PATH /Users/rwblickhan/Developer/Qt5.9/5.9.1/clang_64)
+else()
+    set(CMAKE_PREFIX_PATH /usr/lib/x86_64-linux-gnu)
+endif()
 
 include_directories(include)
 add_subdirectory(bgfx.cmake)
