Switch to SDL2 and C++14

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
-language: cpp
-before_install:
-    - sudo apt-get install qt5-default qttools5-dev-tools
+language: generic
+os: linux
 script: ./build.sh
-dist: trusty
+env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
+addons:
+  apt:
+    packages:
+      - g++-5
+      - libsdl2-dev
+    sources: &sources
+      - llvm-toolchain-trusty-4.0
+      - ubuntu-toolchain-r-test
