Add glm as a dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeScripts)
 
 include_directories(src/inc)
-add_subdirectory(bgfx.cmake)
+add_subdirectory(deps/bgfx.cmake)
+add_subdirectory(deps/glm)
 find_package(SDL2)
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 find_package(X11)
@@ -16,6 +17,7 @@ set(SOURCE_FILES src/main.cpp src/viewport.cpp src/inc/viewport.h)
 add_executable(spaceraft ${SOURCE_FILES})
 target_link_libraries(spaceraft bgfx)
 target_link_libraries(spaceraft SDL2)
+target_link_libraries(spaceraft glm)
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 target_link_libraries(spaceraft X11)
 endif()
