--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: generic
 os: linux
-script: ./build.sh
+script: ./get_deps.sh
 env: COMPILER_NAME=gcc CXX=g++-5 CC=gcc-5
 addons:
   apt:
     packages:
       - g++-5
       - libsdl2-dev
-    sources: &sources
+    sources:
       - llvm-toolchain-trusty-4.0
       - ubuntu-toolchain-r-test
